--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: Gary Ditsch
 twitter_username: ditschfitness
 github_username:  garyditsch
 description: # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  # Write an awesome description for your new site here. You can edit this
+  # line in _config.yml. It will appear in your document head meta (for
+  # Google search results) and in your feed.xml site description.
